adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,6 +9,10 @@
 <body>
     <h1>Olá, Mundo!</h1>
     <hr>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis ducimus voluptates officia? Eveniet ab ullam dignissimos quisquam nisi, odio dolores? In mollitia ducimus nam perspiciatis eius quam dignissimos dolorum pariatur?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis ducimus voluptates officia? Eveniet ab ullam dignissimos quisquam nisi, 
+        odio dolores? In mollitia ducimus nam perspiciatis eius quam dignissimos dolorum pariatur?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, voluptatibus tempore qui fuga explicabo id enim nobis perspiciatis 
+        delectus eligendi est quibusdam alias dolores cupiditate ut adipisci quos nostrum sit!
+    </p>    
 </body>
 </html>
